welcome.lessons.welcome.bat.bool1.Close10.scala.error
hasTeen:2: error: '(' expected but identifier found.
  if !((a < 13 & a > 19) & (b < 13 & b > 19) & (c < 13 & c > 19)) {return  true}
     ^hasTeen:4: error: illegal start of simple expression
} 
^